...
        return imagePicker
    }

    override func viewDidLoad() {
        super.viewDidLoad()
        collectionView.reloadData()
        collectionView.accessibilityIdentifier = "GifsCollectionViewController.collectionView"
        addButton.accessibilityIdentifier = "GifsCollectionViewController.addButton"
    }
    
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        collectionView.reloadData()
    }
...
