...
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="INt-HB-UNI">
                                <rect key="frame" x="20" y="144" width="374" height="646"/>
                                <subviews>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7He-ss-HQA">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="646"/>
                                        <accessibility key="accessibilityConfiguration" identifier="GifEditViewController.imageView"/>
                                    </imageView>
                                </subviews>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstItem="7He-ss-HQA" firstAttribute="leading" secondItem="INt-HB-UNI" secondAttribute="leading" id="1k5-fA-ZLH"/>
                                    <constraint firstItem="7He-ss-HQA" firstAttribute="top" secondItem="INt-HB-UNI" secondAttribute="top" id="4Oi-vM-B3r"/>
...
